finish location and form planning ajax, qr code and login

--- a/app.json
+++ b/app.json
@@ -2,7 +2,8 @@
   "pages":[
     "pages/index/index",
     "pages/logs/logs",
-    "pages/location/location"
+    "pages/location/location",
+    "pages/form/form"
   ],
   "window":{
     "backgroundTextStyle":"light",
